Fixed display of user favorites star and session title. On IE6, the title wouldn't appear at all. On Camino, the word "STAR" would be overlaid over the image.

--- a/themes/bridgepdx/stylesheets/custom.css
+++ b/themes/bridgepdx/stylesheets/custom.css
@@ -858,7 +858,10 @@ ul.calendar_items {
   height: 18px;
   display: inline-block;
   overflow: hidden;
-  text-indent: -999px;
+}
+
+.favorite span {
+  visibility: hidden;
 }
 
 .favorite.checked {
